deploy: bcdf7aa337862a64fab8de99d1821d4ec9761dfa

--- a/404.html
+++ b/404.html
@@ -54,6 +54,9 @@
     <li>
       <a href="articles/getting_started.html">Getting Started</a>
     </li>
+    <li>
+      <a href="articles/testing_packages.html">Adding Tests to Packages</a>
+    </li>
   </ul>
 </li>
       </ul>
