--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </h1></div>
 <p>This is a concise, <a href="http://testanything.org/" class="external-link">TAP</a>-compliant, R package for writing unit tests. Authored tests can be run with <code>R CMD check</code> with minimal implementation overhead.</p>
 <p>The workhorse of the <code>unittest</code> package is the <code>ok</code> function which prints “ok” when the expression provided evaluates to <code>TRUE</code> and “not ok” if the expression evaluates to anything else or results in an error.</p>
-<p>If you are writing a package see the <a href="https://ravingmantis.github.io/unittest/articles/testing_packages.html" class="external-link">“Adding Tests to Packages” vignette</a>.</p>
+<p>If you are writing a package see the <a href="https://cran.r-project.org/web/packages/unittest/vignettes/testing_packages.html" class="external-link">“Adding Tests to Packages” vignette</a>.</p>
 <p>The package was inspired by Perl’s <a href="https://metacpan.org/pod/Test::Simple" class="external-link">Test::Simple</a>.</p>
 <p>If you want more features there are other unit testing packages out there; see <a href="https://CRAN.R-project.org/package=testthat" class="external-link">testthat</a>, <a href="https://CRAN.R-project.org/package=RUnit" class="external-link">RUnit</a>, <a href="https://CRAN.R-project.org/package=svUnit" class="external-link">svUnit</a>.</p>
 <div class="section level2">
